# async-interpreters

./: LICENSE  README.md  benchmark.md  pyproject.toml  requirements-tests.txt  requirements.txt
async_interpreters/: __init__.py  data.py  params.py  utils.py  workers.py
tests/: __init__.py  test_basic.py  test_callable_class.py  test_functools_partical.py  test_inner_functions.py  test_lambda.py
